k8s/server-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-load-balancer
spec:
  clusterIP: 10.39.255.59
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30018
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    component: server
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 34.74.204.220
